[package]
name = "custom-move-code"
version = "0.1.0"
edition = "2018"

[dependencies]
diem-framework = { path = "../../language/diem-framework" }
diem-vm = { path = "../../language/diem-vm" }
move-stdlib = { path = "../../language/move-stdlib" }
move-unit-test = { path = "../../language/tools/move-unit-test" }