[package]
name = "transaction-builder"
version = "0.0.1"
description = "Generated transaction builders"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = "0.1.2"
hex = "0.4.3"
once_cell = "1.7.2"
move-core-types = { path = "../../language/move-core/types" }
diem-types = { path = "../../types" }
thiserror = "1.0"
log = "0.4.14"
tokio = { version = "1.8.0", features = ["full", "time"] }
parking_lot = "0.11.1"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
move-core-types = { path = "../../language/move-core/types" }
diem-workspace-hack = { path = "../../common/workspace-hack" }

[features]
default = []
#fuzzing = ["proptest", "proptest-derive", "move-core-types/fuzzing"]
